motion galary update

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <!-- Navbar -->
     <header class="bg-gradient-to-r from-blue-600 to-blue-800 text-white sticky top-0 z-50">
         <nav class="container mx-auto flex items-center justify-between p-4">
+            <div class="flex justify-center items-center gap-4">
+                <img class="w-14 h-14" src="./Images/home-image/motion-energy-logo.png" alt="">
             <h2 class="text-2xl font-bold"><a href="#">Motion Energy</a></h2>
+            </div>
             <input type="checkbox" id="menu-toggle" class="hidden">
             <label for="menu-toggle" class="md:hidden cursor-pointer">
                 <i class="fas fa-bars text-2xl"></i>
@@ -51,7 +54,7 @@
             </div>
             <div class="md:w-1/2 p-4">
                 <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1">
-                    <img src="https://via.placeholder.com/500x400?text=Motion+Energy+Balm" alt="Motion Energy Balm" class="w-full rounded-lg shadow-lg">
+                    <img src="./Images/home-image/motion energy.jpg" alt="Motion Energy Balm" class="w-full rounded-lg shadow-lg">
                 </a>
             </div>
         </div>
@@ -94,16 +97,16 @@
             <h2 class="text-3xl font-bold text-center mb-6">Explore Motion Energy</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
                 <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1">
-                    <img src="https://via.placeholder.com/300x200?text=Product+1" alt="Motion Energy Product" class="w-full h-48 object-cover rounded-lg">
+                    <img src="./Images/home-image/motion energy-1.jpg" alt="Motion Energy Product" class="w-full h-60 object-cover rounded-lg">
                 </a>
                 <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1">
-                    <img src="https://via.placeholder.com/300x200?text=Product+2" alt="Motion Energy Application" class="w-full h-48 object-cover rounded-lg">
+                    <img src="./Images/home-image/motion-energy-3.jpg" alt="Motion Energy Application" class="w-full h-60 object-cover rounded-lg">
                 </a>
                 <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1">
-                    <img src="https://via.placeholder.com/300x200?text=Product+3" alt="Motion Energy Ingredients" class="w-full h-48 object-cover rounded-lg">
+                    <img src="./Images/home-image/motion energy-2.jpg" alt="Motion Energy Ingredients" class="w-full h-60 object-cover rounded-lg">
                 </a>
                 <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1">
-                    <img src="https://via.placeholder.com/300x200?text=Product+4" alt="Motion Energy Packaging" class="w-full h-48 object-cover rounded-lg">
+                    <img src="./Images/home-image/motion-energy-4.jpg" alt="Motion Energy Packaging" class="w-full h-60 object-cover rounded-lg">
                 </a>
             </div>
         </div>
@@ -115,28 +118,37 @@
             <h2 class="text-3xl font-bold text-center mb-6">What Users Say About Motion Energy</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <p class="italic">"I was skeptical, but Motion Energy changed my mind. It’s better than any massage for my sore muscles!"</p>
-                    <p class="mt-4 font-semibold">Anonymous User</p>
+                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
+                    <p class="italic">I was skeptical, but Motion Energy changed my mind. It’s better than any massage for my sore muscles!</p>
+                    <p class="mt-4 font-semibold">Luisa Jerezr</p>
                 </div>
                 <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <p class="italic">"This balm is a game-changer. The warming effect helps me stay active without discomfort."</p>
-                    <p class="mt-4 font-semibold">Anonymous User</p>
+                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
+                    <p class="italic">This balm is a game-changer. The warming effect helps me stay active without discomfort.</p>
+                    <p class="mt-4 font-semibold">Emilia Serrano
+                    </p>
                 </div>
                 <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <p class="italic">"I use Motion Energy before workouts, and it keeps my joints feeling great. Highly recommend!"</p>
-                    <p class="mt-4 font-semibold">Anonymous User</p>
+                    
+                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
+                    <p class="italic">I use Motion Energy before workouts, and it keeps my joints feeling great. Highly recommend!</p>
+                    <p class="mt-4 font-semibold">Benito Vilchez</p>
                 </div>
                 <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <p class="italic">"My lower back feels so much better since I started using this balm. It’s a must-have!"</p>
-                    <p class="mt-4 font-semibold">Anonymous User</p>
+                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
+                    <p class="italic">My lower back feels so much better since I started using this balm. It’s a must-have!</p>
+                    <p class="mt-4 font-semibold">Ana Zabala</p>
                 </div>
                 <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <p class="italic">"Motion Energy’s natural formula is amazing. I feel energized and ready for the day!"</p>
-                    <p class="mt-4 font-semibold">Anonymous User</p>
+                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
+                    <p class="italic">Motion Energy’s natural formula is amazing. I feel energized and ready for the day!</p>
+                    <p class="mt-4 font-semibold">Sofia Mejias
+                    </p>
                 </div>
                 <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <p class="italic">"I bought this for my parents, and they love it. It’s helped them stay active and comfortable."</p>
-                    <p class="mt-4 font-semibold">Anonymous User</p>
+                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
+                    <p class="italic">I bought this for my parents, and they love it. It’s helped them stay active and comfortable.</p>
+                    <p class="mt-4 font-semibold">Elias Justice </p>
                 </div>
             </div>
         </div>
