motion about image setup

--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
     <title>About | Motion Energy</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <!-- Favicon -->
+     <link rel="shortcut icon" href="./Images/home-image/motion-energy-logo.png" type="image/x-icon">
+
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -37,7 +40,11 @@
     <!-- Navigation -->
     <nav class="bg-blue-600 text-white p-4 sticky top-0 z-50">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold">Motion Energy</h1>
+            
+            <div class="flex justify-center items-center gap-4">
+                <img class="w-14 h-14" src="./Images/home-image/motion-energy-logo.png" alt="">
+            <h2 class="text-2xl font-bold"><a href="#">Motion Energy</a></h2>
+            </div>
             <div class="toggle-icon cursor-pointer md:hidden" onclick="toggleMenu()">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
@@ -56,7 +63,7 @@
     <!-- Section 1: Introduction to Motion Energy -->
     <section class="py-12 bg-white">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Motion+Energy+Introduction" alt="Motion Energy Balm for Energy in Motion" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/about-image/motion-energy-1.jpg" alt="Motion Energy Balm for Energy in Motion" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 mb-4">Discover Motion Energy</h2>
             <p class="text-base md:text-lg text-gray-600 max-w-3xl mx-auto">
                 Motion Energy is a warming body balm designed to support your muscles and joints. Infused with natural ingredients like rosemary oil, eucalyptus oil, cinnamon oil, ginger extract, and eucalyptus leaf, this balm promotes <strong>energy in motion</strong> for an active lifestyle.
@@ -74,7 +81,7 @@
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 text-center mb-8">Motion Energy Definition</h2>
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-6 md:mb-0">
-                    <img src="https://via.placeholder.com/500x300?text=Motion+Energy+Body+Balm" alt="Motion Energy Body Balm for Energy and Motion" class="rounded-lg shadow-lg max-w-full h-auto">
+                    <img src="./Images/about-image/motion-energy-2.jpg" alt="Motion Energy Body Balm for Energy and Motion" class="rounded-lg shadow-lg max-w-full h-auto">
                 </div>
                 <div class="md:w-1/2 md:pl-8">
                     <p class="text-base md:text-lg text-gray-600">
@@ -88,7 +95,7 @@
     <!-- Section 3: Our Ingredients -->
     <section class="py-12 bg-white">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Natural+Ingredients" alt="Natural Ingredients in Motion Energy Balm" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/about-image/motion-energy-3.jpg" alt="Natural Ingredients in Motion Energy Balm" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 mb-8">Natural Ingredients for Energy in Motion</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="p-6 bg-gray-100 rounded-lg">
@@ -114,7 +121,7 @@
     <!-- Section 4: Our Mission -->
     <section class="py-12 bg-gray-50">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Motion+Energy+Mission" alt="Motion Energy Mission for Energy and Motion" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/about-image/motion-energy-4.jpg" alt="Motion Energy Mission for Energy and Motion" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 mb-8">Our Mission</h2>
             <p class="text-base md:text-lg text-gray-600 max-w-3xl mx-auto">
                 At Motion Energy, our mission is to empower you to live an active, vibrant life. We believe in the power of <strong>motion energy</strong> to enhance your daily routine, offering a natural way to support your muscles and joints with our <strong>motion energy body balm</strong>.
@@ -125,7 +132,7 @@
     <!-- Section 5: Footnotes -->
     <section class="py-8 bg-white">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Motion+Energy+Info" alt="Motion Energy Information" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/about-image/motion-energy-5.jpg" alt="Motion Energy Information" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <p class="text-xs md:text-sm text-gray-500">
                 *This Advertorial is based on fiction and any similarity to real people, places, or events are purely coincidental.
             </p>
