--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+    <!-- Favicon -->
+     <link rel="shortcut icon" href="./Images/home-image/motion-energy-logo.png" type="image/x-icon">
 </head>
 <body class="font-sans text-gray-800">
     <!-- Navbar -->
