blog page update

--- a/services.html
+++ b/services.html
@@ -6,6 +6,9 @@
     <title>Services | Motion Energy</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./Images/home-image/motion-energy-logo.png" type="image/x-icon">
+
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -32,12 +35,17 @@
             }
         }
     </style>
+
 </head>
 <body class="bg-gray-100">
     <!-- Navigation -->
     <nav class="bg-blue-600 text-white p-4 sticky top-0 z-50">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold">Motion Energy</h1>
+            <!-- <h1 class="text-2xl font-bold">Motion Energy</h1> -->
+            <div class="flex justify-center items-center gap-4">
+                <img class="w-14 h-14" src="./Images/home-image/motion-energy-logo.png" alt="">
+            <h2 class="text-2xl font-bold"><a href="#">Motion Energy</a></h2>
+            </div>
             <div class="toggle-icon cursor-pointer md:hidden" onclick="toggleMenu()">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
@@ -56,7 +64,7 @@
     <!-- Section 1: Services Overview -->
     <section class="py-12 bg-white">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Motion+Energy+Services" alt="Motion Energy Services for Energy in Motion" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/service-image/motion-energy-1.jpg" alt="Motion Energy Services for Energy in Motion" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 mb-4">Our Services</h2>
             <p class="text-base md:text-lg text-gray-600 max-w-3xl mx-auto">
                 Discover how <strong>motion energy</strong> can enhance your wellness routine with our range of services centered around our <strong>motion energy body balm</strong>.
@@ -72,7 +80,7 @@
     <section class="py-12 bg-gray-50">
         <div class="container mx-auto px-4">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 text-center mb-8">Support with Motion Energy</h2>
-            <img src="https://via.placeholder.com/600x300?text=Product+Support" alt="Support with Motion Energy Body Balm" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/service-image/motion-energy-2.jpg" alt="Support with Motion Energy Body Balm" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-6 md:mb-0">
                     <p class="text-base md:text-lg text-gray-600">
@@ -81,7 +89,7 @@
                 </div>
                 <div class="md:w-1/2 md:pl-8">
                     <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1">
-                        <img src="https://via.placeholder.com/500x300?text=Order+Motion+Energy" alt="Order Motion Energy for Energy in Motion" class="rounded-lg shadow-lg max-w-full h-auto">
+                        <img src="./Images/service-image/motion-energy-3.jpg" alt="Order Motion Energy for Energy in Motion" class="rounded-lg shadow-lg max-w-full h-auto">
                     </a>
                 </div>
             </div>
@@ -91,7 +99,7 @@
     <!-- Section 3: Easy Ordering -->
     <section class="py-12 bg-white">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Easy+Ordering" alt="Easy Ordering for Motion Energy Balm" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/service-image/motion-energy-4.jpg" alt="Easy Ordering for Motion Energy Balm" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 mb-8">Hassle-Free Ordering</h2>
             <p class="text-base md:text-lg text-gray-600 max-w-3xl mx-auto">
                 Order your <strong>motion energy</strong> balm with ease through our hybrid model, allowing you to choose between cash on delivery or online payment for maximum convenience.
@@ -106,7 +114,7 @@
     <!-- Section 4: Customer Support -->
     <section class="py-12 bg-gray-50">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Customer+Support" alt="Customer Support for Motion Energy" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/service-image/motion-energy-5.jpg" alt="Customer Support for Motion Energy" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 mb-8">Dedicated Customer Support</h2>
             <p class="text-base md:text-lg text-gray-600 max-w-3xl mx-auto">
                 Our team is here to assist you with any questions about <strong>motion energy</strong> and our services, ensuring you get the most out of your <strong>energy in motion</strong> experience.
@@ -121,7 +129,7 @@
     <!-- Section 5: Footnotes -->
     <section class="py-8 bg-white">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Motion+Energy+Info" alt="Motion Energy Information" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/service-image/motion-energy-6.jpg" alt="Motion Energy Information" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <p class="text-xs md:text-sm text-gray-500">
                 *This Advertorial is based on fiction and any similarity to real people, places, or events are purely coincidental.
             </p>
