--- a/benefits.html
+++ b/benefits.html
@@ -6,6 +6,8 @@
     <title>Benefits | Motion Energy</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./Images/home-image/motion-energy-logo.png" type="image/x-icon">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -37,7 +39,11 @@
     <!-- Navigation -->
     <nav class="bg-blue-600 text-white p-4 sticky top-0 z-50">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold">Motion Energy</h1>
+            
+            <div class="flex justify-center items-center gap-4">
+                <img class="w-14 h-14" src="./Images/home-image/motion-energy-logo.png" alt="">
+            <h2 class="text-2xl font-bold"><a href="#">Motion Energy</a></h2>
+            </div>
             <div class="toggle-icon cursor
 
 -pointer md:hidden" onclick="toggleMenu()">
