--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,8 @@
     <title>Blog | Motion Energy</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./Images/home-image/motion-energy-logo.png" type="image/x-icon">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -37,7 +39,11 @@
     <!-- Navigation -->
     <nav class="bg-blue-600 text-white p-4 sticky top-0 z-50">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold">Motion Energy</h1>
+            
+            <div class="flex justify-center items-center gap-4">
+                <img class="w-14 h-14" src="./Images/home-image/motion-energy-logo.png" alt="">
+            <h2 class="text-2xl font-bold"><a href="#">Motion Energy</a></h2>
+            </div>
             <div class="toggle-icon cursor-pointer md:hidden" onclick="toggleMenu()">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
@@ -56,7 +62,7 @@
     <!-- Section 1: Blog Introduction -->
     <section class="py-12 bg-white">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Motion+Energy+Blog" alt="Motion Energy Blog for Energy in Motion" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/blog-image/motion-energy-1.jpg" alt="Motion Energy Blog for Energy in Motion" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 mb-4">Explore Motion Energy Insights</h2>
             <p class="text-base md:text-lg text-gray-600 max-w-3xl mx-auto">
                 Dive into our blog to discover tips and insights about <strong>motion energy</strong> and how our body balm can support an active lifestyle. Learn about <strong>energy and motion</strong> to enhance your daily routine.
@@ -72,7 +78,7 @@
     <section class="py-12 bg-gray-50">
         <div class="container mx-auto px-4">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 text-center mb-8">Latest Posts</h2>
-            <img src="https://via.placeholder.com/600x300?text=Latest+Motion+Energy+Posts" alt="Latest Posts on Motion Energy Body Balm" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/blog-image/motion-energy-2.jpg" alt="Latest Posts on Motion Energy Body Balm" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div class="p-6 bg-white rounded-lg shadow-md">
                     <h3 class="text-lg md:text-xl font-semibold text-gray-800 mb-2">Boost Your Energy in Motion</h3>
@@ -91,7 +97,7 @@
     <!-- Section 3: Wellness Tips -->
     <section class="py-12 bg-white">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Wellness+Tips" alt="Wellness Tips for Energy and Motion" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/blog-image/motion-energy-3.jpg" alt="Wellness Tips for Energy and Motion" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 mb-8">Wellness Tips for Energy and Motion</h2>
             <p class="text-base md:text-lg text-gray-600 max-w-3xl mx-auto">
                 Discover practical tips to maintain <strong>energy in motion</strong> with our blog posts, focusing on natural ways to support your active lifestyle using <strong>motion energy</strong>.
@@ -106,7 +112,7 @@
     <!-- Section 4: Footnotes -->
     <section class="py-8 bg-gray-50">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Motion+Energy+Info" alt="Motion Energy Information" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/blog-image/motion-energy-4.jpg" alt="Motion Energy Information" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <p class="text-xs md:text-sm text-gray-500">
                 *This Advertorial is based on fiction and any similarity to real people, places, or events are purely coincidental.
             </p>
