--- a/benefits.html
+++ b/benefits.html
@@ -64,7 +64,7 @@
     <!-- Section 1: Benefits Overview -->
     <section class="py-12 bg-white">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Motion+Energy+Benefits" alt="Benefits of Motion Energy Body Balm" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/benefit/motion-energy-6.jpg" alt="Benefits of Motion Energy Body Balm" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 mb-4">Benefits of Motion Energy</h2>
             <p class="text-base md:text-lg text-gray-600 max-w-3xl mx-auto">
                 Experience the advantages of <strong>motion energy</strong> with our body balm, designed to support your active lifestyle and promote <strong>energy in motion</strong>.
@@ -80,7 +80,7 @@
     <section class="py-12 bg-gray-50">
         <div class="container mx-auto px-4">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 text-center mb-8">Soothing Muscle & Joint Support</h2>
-            <img src="https://via.placeholder.com/600x300?text=Soothing+Relief" alt="Soothing Relief with Motion Energy" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/benefit/motion-energy-1.jpg" alt="Soothing Relief with Motion Energy" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-6 md:mb-0">
                     <p class="text-base md:text-lg text-gray-600">
@@ -89,7 +89,7 @@
                 </div>
                 <div class="md:w-1/2 md:pl-8">
                     <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1">
-                        <img src="https://via.placeholder.com/500x300?text=Order+Motion+Energy+Balm" alt="Order Motion Energy for Energy in Motion" class="rounded-lg shadow-lg max-w-full h-auto">
+                        <img src="./Images/benefit/motion-energy-2.jpg" alt="Order Motion Energy for Energy in Motion" class="rounded-lg shadow-lg max-w-full h-auto">
                     </a>
                 </div>
             </div>
@@ -99,7 +99,7 @@
     <!-- Section 3: Natural Ingredients -->
     <section class="py-12 bg-white">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Natural+Ingredients" alt="Natural Ingredients in Motion Energy Balm" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/benefit/motion-energy-3.jpg" alt="Natural Ingredients in Motion Energy Balm" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 mb-8">Powered by Nature</h2>
             <p class="text-base md:text-lg text-gray-600 max-w-3xl mx-auto">
                 Infused with rosemary oil, eucalyptus oil, cinnamon oil, ginger extract, and eucalyptus leaf, our balm harnesses the power of nature to support <strong>motion energy</strong>.
@@ -114,7 +114,7 @@
     <!-- Section 4: Enhanced Mobility -->
     <section class="py-12 bg-gray-50">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Enhanced+Mobility" alt="Enhanced Mobility with Motion Energy" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/benefit/motion-energy-4.jpg" alt="Enhanced Mobility with Motion Energy" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 mb-8">Move Freely with Motion Energy</h2>
             <p class="text-base md:text-lg text-gray-600 max-w-3xl mx-auto">
                 Embrace an active lifestyle with the <strong>motion energy definition</strong> of freedom and vitality, supported by our specially formulated body balm.
@@ -129,7 +129,7 @@
     <!-- Section 5: Footnotes -->
     <section class="py-8 bg-white">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Motion+Energy+Info" alt="Motion Energy Information" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/benefit/motion-energy-5.jpg" alt="Motion Energy Information" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <p class="text-xs md:text-sm text-gray-500">
                 *This Advertorial is based on fiction and any similarity to real people, places, or events are purely coincidental.
             </p>
