--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Motion Energy – a powerful balm to relieve muscle and joint pain. Motion Energy boosts circulation. Try Motion Energy now in the USA.Motion Energy is a natural body balm specially formulated to relieve muscle and joint pain. Whether you're an athlete or work long hours, Motion Energy helps boost blood circulation, reduce inflammation, and provide fast-acting comfort. ">
     <title>Motion Energy - Warming Body Balm</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
