--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
     <!-- Favicon -->
      <link rel="shortcut icon" href="./Images/home-image/motion-energy-logo.png" type="image/x-icon">
+
+    <!-- Canonical Tag add -->
+    <link rel="canonical" href="https://motion-energy-eight.vercel.app/" />
+
+
+
+
 </head>
 <body class="font-sans text-gray-800">
     <!-- Navbar -->
