--- a/benefits.html
+++ b/benefits.html
@@ -64,7 +64,7 @@
     <!-- Section 1: Benefits Overview -->
     <section class="py-12 bg-white">
         <div class="container mx-auto px-4 text-center">
-            <img src="./Images/benefit/motion-energy-6.jpg" alt="Benefits of Motion Energy Body Balm" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/benefit/motion-energy-1.jpg" alt="Benefits of Motion Energy Body Balm" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 mb-4">Benefits of Motion Energy</h2>
             <p class="text-base md:text-lg text-gray-600 max-w-3xl mx-auto">
                 Experience the advantages of <strong>motion energy</strong> with our body balm, designed to support your active lifestyle and promote <strong>energy in motion</strong>.
@@ -129,7 +129,7 @@
     <!-- Section 5: Footnotes -->
     <section class="py-8 bg-white">
         <div class="container mx-auto px-4 text-center">
-            <img src="./Images/benefit/motion-energy-5.jpg" alt="Motion Energy Information" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="https://via.placeholder.com/600x300?text=Motion+Energy+Info" alt="Motion Energy Information" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <p class="text-xs md:text-sm text-gray-500">
                 *This Advertorial is based on fiction and any similarity to real people, places, or events are purely coincidental.
             </p>
